# bdemu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  Makefile  README.md  SCHEMA.md
.cargo/: config.toml
.github/workflows/: ci.yml  profile-from-issue.yml  release.yml  update-readme.yml
profiles/: pioneer-bdr-s09.json
profiles/bu40n/: drive.toml
profiles/hl-dt-st-bd-re-bu40n/: drive.toml
profiles/pioneer-bd-rw-bdr-s09/: drive.toml
profiles/pioneer-bdr-s09/: drive.toml
src/: bin.rs  capture.rs  control.rs  lib.rs  profile.rs  scsi.rs  scsi_probe.rs  sg.rs
