[package]
name = "bdemu"
version = "0.8.2"
edition = "2021"
rust-version = "1.86"
license = "AGPL-3.0"
description = "Blu-ray Drive Emulator — LD_PRELOAD SCSI interceptor with JSON profiles"
repository = "https://github.com/freemkv/bdemu"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "bdemu"
path = "src/bin.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
libfreemkv = "0.8"
